🐛FIX: scroll shadow not covered by <RadioSel>

--- a/src/components/ScrollContainer.scss
+++ b/src/components/ScrollContainer.scss
@@ -14,6 +14,7 @@
     &::before, &::after {
         content: '';
         position: absolute;
+        z-index: 1;
 
         opacity: 1;
 
